dnl
dnl autoconf script for hlfl
dnl


AC_INIT(.root-dir)
AC_REVISION($Revision$)dnl

dnl Set up the main lines of the config script
AC_CONFIG_HEADER(src/config.h)
AC_PREFIX_DEFAULT("/usr/local")
AC_LANG_C

dnl Check for several programs
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_CHECK_HEADERS(stdio.h stdlib.h string.h sys/types.h sys/socket.h netinet/in.h arpa/inet.h)

AC_DEFINE(DATADIR, "$datadir")
AC_SUBST(VERSION, `cat VERSION`)
AC_OUTPUT(hlfl.tmpl)
